fixing legen labels wrapping issue

--- a/src/styles/_map-legend.scss
+++ b/src/styles/_map-legend.scss
@@ -59,7 +59,7 @@ div.submissions {
 
 .legendlabel {
   text-transform: uppercase;
-  font-size: 1.2rem !important;
+  font-size: 1.1rem !important;
 }
 
 .legendbox {
